[gd_scene load_steps=17 format=1]

[ext_resource path="res://Weapon/DefaultSword/DefaultSword.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 50, 64 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 55, 64 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 61, 80 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 74, 18 )

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 97.0

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 24, 50 )

[sub_resource type="Animation" id=7]

resource/name = "atk1airspin"
length = 0.3
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("testVisual/atk1_combo1:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.19209e-07 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("testVisual/atk1_combo2:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("testVisual/atk1_combo3:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("testVisual/atk2_thrust:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("testVisual/atk1_air_spin:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 1.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("testVisual/atk2_air_downward_thrust:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0.3 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "switch_atk_state_callback"
} ]
}

[sub_resource type="Animation" id=8]

resource/name = "atk1combo1"
length = 0.3
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("testVisual/atk1_combo1:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("testVisual/atk1_combo2:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("testVisual/atk1_combo3:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("testVisual/atk2_thrust:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("testVisual/atk1_air_spin:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("testVisual/atk2_air_downward_thrust:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0.15 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "switch_atk_state_callback"
} ]
}

[sub_resource type="Animation" id=9]

resource/name = "atk1combo2"
length = 0.3
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("testVisual/atk1_combo1:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.19209e-07 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("testVisual/atk1_combo2:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("testVisual/atk1_combo3:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("testVisual/atk2_thrust:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("testVisual/atk1_air_spin:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("testVisual/atk2_air_downward_thrust:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0.15 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "switch_atk_state_callback"
} ]
}

[sub_resource type="Animation" id=10]

resource/name = "atk1combo3"
length = 0.5
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("testVisual/atk1_combo1:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.19209e-07 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("testVisual/atk1_combo2:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("testVisual/atk1_combo3:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("testVisual/atk2_thrust:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("testVisual/atk1_air_spin:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("testVisual/atk2_air_downward_thrust:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0.2 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "switch_atk_state_callback"
} ]
}

[sub_resource type="Animation" id=11]

resource/name = "atk2_air_downward_thrust"
length = 0.01
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("testVisual/atk1_combo1:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.19209e-07 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("testVisual/atk1_combo2:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("testVisual/atk1_combo3:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("testVisual/atk2_thrust:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("testVisual/atk1_air_spin:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("testVisual/atk2_air_downward_thrust:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=12]

resource/name = "atk2_air_downward_thrust_callback"
length = 0.05
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("testVisual/atk1_combo1:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.19209e-07 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("testVisual/atk1_combo2:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("testVisual/atk1_combo3:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("testVisual/atk2_thrust:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("testVisual/atk1_air_spin:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("testVisual/atk2_air_downward_thrust:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.05 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=13]

length = 0.2
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("testVisual/atk1_combo1:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.19209e-07 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("testVisual/atk1_combo2:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("testVisual/atk1_combo3:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("testVisual/atk2_thrust:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("testVisual/atk1_air_spin:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("testVisual/atk2_air_downward_thrust:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0.2 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "switch_atk_state_callback"
} ]
}

[sub_resource type="Animation" id=14]

length = 0.15
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("testVisual/atk1_combo1:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.19209e-07 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("testVisual/atk1_combo2:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("testVisual/atk1_combo3:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("testVisual/atk2_thrust:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.15 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("testVisual/atk1_air_spin:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("testVisual/atk2_air_downward_thrust:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray(  ),
"transitions": FloatArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=15]

length = 0.01
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("testVisual/atk1_combo1:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.19209e-07 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("testVisual/atk1_combo2:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("testVisual/atk1_combo3:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("testVisual/atk2_thrust:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("testVisual/atk1_air_spin:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("testVisual/atk2_air_downward_thrust:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="DefaultSword" type="Node2D"]

script/script = ExtResource( 1 )
damage = 0
push_back_force = Vector2( 0, 0 )
status = ""

[node name="hitboxes" type="Node2D" parent="."]

[node name="atk1_combo1" type="Area2D" parent="hitboxes"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 114, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxes/atk1_combo1"]

transform/pos = Vector2( 114, 0 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="atk1_combo2" type="Area2D" parent="hitboxes"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 119, -1 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxes/atk1_combo2"]

transform/pos = Vector2( 119, -1 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="atk1_combo3" type="Area2D" parent="hitboxes"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 123, -2 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxes/atk1_combo3"]

transform/pos = Vector2( 123, -2 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="atk2_thrust" type="Area2D" parent="hitboxes"]

editor/display_folded = true
transform/pos = Vector2( 150, 0 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -11.0031, -0.440128 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxes/atk2_thrust"]

transform/pos = Vector2( -11.0031, -0.440128 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="atk1_air_spin" type="Area2D" parent="hitboxes"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxes/atk1_air_spin"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="atk2_air_downward_thrust" type="Area2D" parent="hitboxes"]

transform/pos = Vector2( 0, 115 )
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxes/atk2_air_downward_thrust"]

shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="spawn_pos" type="Position2D" parent="hitboxes/atk2_air_downward_thrust"]

transform/pos = Vector2( 0, 50 )

[node name="testVisual" type="Control" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 32.0
margin/right = -8.0
margin/bottom = -8.0

[node name="atk1_combo1" type="ColorFrame" parent="testVisual"]

visibility/opacity = 1.19209e-07
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = -64.0
margin/right = 164.0
margin/bottom = 64.0
color = Color( 1, 0, 0, 0.490196 )

[node name="atk1_combo2" type="ColorFrame" parent="testVisual"]

visibility/opacity = 1.19209e-07
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = -65.0
margin/right = 174.0
margin/bottom = 63.0
color = Color( 0.992188, 1, 0, 0.490196 )

[node name="atk1_combo3" type="ColorFrame" parent="testVisual"]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 62.0
margin/top = -82.0
margin/right = 184.0
margin/bottom = 78.0
color = Color( 0.03125, 1, 0, 0.490196 )

[node name="atk2_thrust" type="ColorFrame" parent="testVisual"]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 65.0
margin/top = -18.0
margin/right = 213.0
margin/bottom = 18.0
color = Color( 0, 1, 0.929688, 0.490196 )

[node name="atk1_air_spin" type="ColorFrame" parent="testVisual"]

visibility/opacity = 0.0
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 120.0
margin/right = -80.0
margin/bottom = -80.0
color = Color( 1, 0, 0.890625, 0.490196 )

[node name="atk2_air_downward_thrust" type="ColorFrame" parent="testVisual"]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -23.0
margin/top = 65.0
margin/right = 24.0
margin/bottom = 165.0
color = Color( 0, 1, 0.929688, 0.490196 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/atk1airspin = SubResource( 7 )
anims/atk1combo1 = SubResource( 8 )
anims/atk1combo2 = SubResource( 9 )
anims/atk1combo3 = SubResource( 10 )
anims/atk2_air_downward_thrust = SubResource( 11 )
anims/atk2_air_downward_thrust_callback = SubResource( 12 )
anims/atk2_thrust = SubResource( 13 )
anims/atk2_thrust_callback = SubResource( 14 )
anims/init = SubResource( 15 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="area_enter" from="hitboxes/atk1_combo1" to="." method="_on_atk1_combo1_area_enter"]

[connection signal="area_enter" from="hitboxes/atk1_combo2" to="." method="_on_atk1_combo2_area_enter"]

[connection signal="area_enter" from="hitboxes/atk1_combo3" to="." method="_on_atk1_combo3_area_enter"]

[connection signal="area_enter" from="hitboxes/atk2_thrust" to="." method="_on_atk2_thrust_area_enter"]

[connection signal="area_enter" from="hitboxes/atk1_air_spin" to="." method="_on_atk1_air_spin_area_enter"]

[connection signal="area_enter" from="hitboxes/atk2_air_downward_thrust" to="." method="_on_atk2_air_downward_thrust_area_enter"]

[connection signal="body_enter" from="hitboxes/atk2_air_downward_thrust" to="." method="_on_atk2_air_downward_thrust_body_enter"]


